Fixed width on folder page and file details page on mobile.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1064,6 +1064,7 @@ input.valid {
   position: relative;
   z-index: 1;
   max-width: 680px;
+  width: 100vw;
   margin: 0 auto;
   padding: 2.5rem 1.5rem;
   flex: 1;
@@ -1255,6 +1256,7 @@ input.valid {
   position: relative;
   z-index: 1;
   max-width: 1100px;
+  width: 100vw;
   margin: 0 auto;
   padding: 2.5rem 1.5rem;
   flex: 1;
